v1.0.0/modules/schema/pages/class/LaborItem.adoc
= `LaborItem`
:toclevels: 4


+++Labor used for work order.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:LaborItem`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/WorkIdentifiedObject.adoc[`WorkIdentifiedObject`]
*** *`LaborItem`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
LaborItem {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}









Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



WorkCostDetail {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OldPerson {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OldWorkTask {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}







LaborItem -> Status: status


LaborItem -> WorkCostDetail: WorkCostDetail


LaborItem -> OldPerson: ErpPersons


LaborItem -> OldWorkTask: WorkTask


LaborItem -> DiagramObject: DiagramObjects


LaborItem -> InstanceSet: InstanceSet


LaborItem -> Name: Names


LaborItem -> ChangeSetMember: PropertiesCIMDataObject


LaborItem -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<WorkCostDetail,`WorkCostDetail`>>
| 1
| xref::class/WorkCostDetail.adoc[`WorkCostDetail`]
| n/a

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<WorkTask,`WorkTask`>>
| 0..1
| xref::class/OldWorkTask.adoc[`OldWorkTask`]
| n/a

| <<activityCode,`activityCode`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Activity code identifies a specific and distinguishable unit of work.+++

| <<cost,`cost`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Total cost for labor. Note that this may not be able to be derived from labor rate and time charged.+++

| <<laborDuration,`laborDuration`>>
| 0..1
| xref::class/Hours.adoc[`Hours`]
| +++Time required to perform work.+++

| <<laborRate,`laborRate`>>
| 0..1
| xref::class/CostRate.adoc[`CostRate`]
| +++The labor rate applied for work.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| n/a

| <<ErpPersons,`ErpPersons`>>
| 0..*
| xref::class/OldPerson.adoc[`OldPerson`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#activityCode]
=== `activityCode`
+++Activity code identifies a specific and distinguishable unit of work.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LaborItem.activityCode`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#cost]
=== `cost`
+++Total cost for labor. Note that this may not be able to be derived from labor rate and time charged.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LaborItem.cost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ErpPersons]
=== `ErpPersons`


[cols="h,4",width=65%]
|===
| URI
| `cim:LaborItem.ErpPersons`
| Cardinality
| 0..*
| Type
| xref::class/OldPerson.adoc[`OldPerson`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#laborDuration]
=== `laborDuration`
+++Time required to perform work.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LaborItem.laborDuration`
| Cardinality
| 0..1
| Type
| xref::class/Hours.adoc[`Hours`]


|===

//[discrete]
[#laborRate]
=== `laborRate`
+++The labor rate applied for work.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LaborItem.laborRate`
| Cardinality
| 0..1
| Type
| xref::class/CostRate.adoc[`CostRate`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#status]
=== `status`


[cols="h,4",width=65%]
|===
| URI
| `cim:LaborItem.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#WorkCostDetail]
=== `WorkCostDetail`


[cols="h,4",width=65%]
|===
| URI
| `cim:LaborItem.WorkCostDetail`
| Cardinality
| 1
| Type
| xref::class/WorkCostDetail.adoc[`WorkCostDetail`]


|===

//[discrete]
[#WorkTask]
=== `WorkTask`


[cols="h,4",width=65%]
|===
| URI
| `cim:LaborItem.WorkTask`
| Cardinality
| 0..1
| Type
| xref::class/OldWorkTask.adoc[`OldWorkTask`]


|===


