v1.1.0/modules/schema/pages/class/LaborItem.adoc
= `LaborItem`
:toclevels: 4


+++Labor used for work order.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:LaborItem`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/WorkIdentifiedObject.adoc[`WorkIdentifiedObject`]
*** *`LaborItem`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<ErpPersons,`ErpPersons`>>
//| [[slots_table.ErpPersons]]<<ErpPersons,`ErpPersons`>>
| 0..* +
xref::class/OldPerson.adoc[`OldPerson`]
| _n/a_
| _n/a_

| <<WorkCostDetail,`WorkCostDetail`>>
//| [[slots_table.WorkCostDetail]]<<WorkCostDetail,`WorkCostDetail`>>
| 1 +
xref::class/WorkCostDetail.adoc[`WorkCostDetail`]
| _n/a_
| _n/a_

| <<WorkTask,`WorkTask`>>
//| [[slots_table.WorkTask]]<<WorkTask,`WorkTask`>>
| 0..1 +
xref::class/OldWorkTask.adoc[`OldWorkTask`]
| _n/a_
| _n/a_

| <<activityCode,`activityCode`>>
//| [[slots_table.activityCode]]<<activityCode,`activityCode`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Activity code identifies a specific and distinguishable unit of work.+++
| _n/a_

| <<cost,`cost`>>
//| [[slots_table.cost]]<<cost,`cost`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++Total cost for labor. Note that this may not be able to be derived from labor rate and time charged.+++
| _n/a_

| <<laborDuration,`laborDuration`>>
//| [[slots_table.laborDuration]]<<laborDuration,`laborDuration`>>
| 0..1 +
xref::class/Hours.adoc[`Hours`]
| +++Time required to perform work.+++
| _n/a_

| <<laborRate,`laborRate`>>
//| [[slots_table.laborRate]]<<laborRate,`laborRate`>>
| 0..1 +
xref::class/CostRate.adoc[`CostRate`]
| +++The labor rate applied for work.+++
| _n/a_

| <<status,`status`>>
//| [[slots_table.status]]<<status,`status`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| _n/a_
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#activityCode]
=== `activityCode`
+++Activity code identifies a specific and distinguishable unit of work.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LaborItem.activityCode`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.activityCode,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#cost]
=== `cost`
+++Total cost for labor. Note that this may not be able to be derived from labor rate and time charged.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LaborItem.cost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

////
[.text-left]
--
<<slots_table.cost,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#ErpPersons]
=== `ErpPersons`



[cols="h,4",width=65%]
|===
| URI
| `cim:LaborItem.ErpPersons`
| Cardinality
| 0..*
| Type
| xref::class/OldPerson.adoc[`OldPerson`]


|===

////
[.text-left]
--
<<slots_table.ErpPersons,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#laborDuration]
=== `laborDuration`
+++Time required to perform work.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LaborItem.laborDuration`
| Cardinality
| 0..1
| Type
| xref::class/Hours.adoc[`Hours`]


|===

////
[.text-left]
--
<<slots_table.laborDuration,&#10548;>>
--
////


//[discrete]
[#laborRate]
=== `laborRate`
+++The labor rate applied for work.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LaborItem.laborRate`
| Cardinality
| 0..1
| Type
| xref::class/CostRate.adoc[`CostRate`]


|===

////
[.text-left]
--
<<slots_table.laborRate,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#status]
=== `status`



[cols="h,4",width=65%]
|===
| URI
| `cim:LaborItem.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]


|===

////
[.text-left]
--
<<slots_table.status,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#WorkCostDetail]
=== `WorkCostDetail`



[cols="h,4",width=65%]
|===
| URI
| `cim:LaborItem.WorkCostDetail`
| Cardinality
| 1
| Type
| xref::class/WorkCostDetail.adoc[`WorkCostDetail`]


|===

////
[.text-left]
--
<<slots_table.WorkCostDetail,&#10548;>>
--
////


//[discrete]
[#WorkTask]
=== `WorkTask`



[cols="h,4",width=65%]
|===
| URI
| `cim:LaborItem.WorkTask`
| Cardinality
| 0..1
| Type
| xref::class/OldWorkTask.adoc[`OldWorkTask`]


|===

////
[.text-left]
--
<<slots_table.WorkTask,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/OldPerson.adoc[`OldPerson`] | xref::class/OldPerson.adoc#LaborItems[`LaborItems`]



| xref::class/OldWorkTask.adoc[`OldWorkTask`] | xref::class/OldWorkTask.adoc#LaborItems[`LaborItems`]



| xref::class/WorkCostDetail.adoc[`WorkCostDetail`] | xref::class/WorkCostDetail.adoc#LaborItems[`LaborItems`]


|===

